--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 # 井号后面的文字是说明文档，不会被程序读取。
 
 # 描述/签名
-name: 青山朝露
-description: 月到天心处，风来水面时。
+name: 一夜西风水倒流
+description: 火焰将如生命般遥遥无期
 
 # 输入你的网站域名（如果你没有添加自己的域名，而是直接用GitHub pages分配的域名的话可以省略）
 url: 
